# beboppin

./: .gitignore  README.md  agents.md
.github/workflows/: minecraft-pages.yml
beboppin/: .gitignore  Package.swift  README.md  run.sh  todos.md
beboppin/Sources/beboppin/: Beboppin.swift  Capture.swift  ChangeGate.swift  Clock.swift  Emit.swift  OCR.swift  Store.swift
cc/: .env.template  curius.md  deploy.sh  package.json  plan.md  pnpm-lock.yaml  start.sh  wrangler.json
cc/migrations/: 0001_initial.sql  0002_thoughts.sql  0003_unify_thoughts_links.sql
cc/src/: ai.ts  bot.ts  index.ts  scheduler.ts  state.ts  storage.ts  telegram.ts  types.ts  viewer.ts
cc/web/: index.html  tsconfig.json  vite.config.ts
cc/web/src/: App.svelte  app.css
clipper/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
clipper/src/: manifest.json
codex-cursor/: README.md  index.ts  package.json
governance/: openrouter.md
governance/charts/: build_charts.py
minecraft/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
minecraft/demo/: main.ts
minecraft/src/: animations.ts  blocks.ts  index.ts  interactions.ts  main.ts  scene.ts  style.css  ui.ts  world.ts
minecraft/tests/: animations.test.ts  blocks.test.ts  world.test.ts
pdf-transcribe/: README.md  pyproject.toml
pdf-transcribe/src/pdf_transcribe/: __init__.py
productivity/: guide.md
scratch/: README.md
systems/: README.md  convo.md
systems/c/: README.md  arr.c  run.sh
systems/os/: notes.md
typed-stuff/assignment0/: hello.ml
(+25 files in other folders)
